# SerialCom

SerialCom/ESP32/: SerialCom.ino
SerialCom/QtRaspberry/: CMakeLists.txt  ItemParam.qml  SerialCom.pro  frame.cpp  frame.h  frameprocessor.cpp  frameprocessor.h  main.cpp  main.qml  qml.qrc  readme.md  serialworker.cpp  serialworker.h
SerialCom/QtRaspberry/resources/: serialcomm.rc
